kafka-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-service
  namespace: kafka
  labels:
    app: kafka-ui-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kafka-ui
  type: ClusterIP
