kafka-ui/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kafka-ingress
  namespace: kafka
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`kafka-ui.mw`)
    priority: 10
    services:
    - name: kafka-ui-service
      port: 80
